# VISA_Bundle

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PACKAGE_UPGRADE_SUMMARY.md  README.md  build.bat  build.py  build_protected_wheel.py  install.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  visa_bundle-1.0.0-py3-none-any.whl
.ai-prompts/: code-review.md  testing.md
.github/prompts/: nameFormatter.prompt.md  packageFileStruct.prompt.md
config/: release-config.yml
docs/: Build_Guide.md  CSharp_API_Design.md  Migration_Summary.md  README.md
docs/ai-context/: AI-ASSISTED-RELEASE-WORKFLOW.md  CLAUDE_AI_INSTRUCTIONS.md  PROJECT_PLAN.md  STRUCTURED_WORKFLOWS.md  TEMPLATE_PROJECT_CONTEXT.md
docs/user-guides/: development-best-practices.md  quick-start.md  release-guide.md  subtree-guide.md
new_scripts/: README.md  change_branch.bat  delete_branch.bat  release_project.bat  run_tests.bat  subtree_init.bat  subtree_pull.bat  update_version.bat
scripts/: build_csharp.py  build_pyc_wheel.bat  build_wheel.bat  check-release-ready.sh  create_tag.bat  delete_branch.bat  prepare-release.sh  pyc_config.ini  run_tests.bat  setup-project.sh  setup_test_env.bat  subtree-sync.sh  subtree_init.bat  subtree_init_all.bat  subtree_pull_all.bat  update-all-projects.sh  version-manager.sh
scripts/lib/: common.sh  github-utils.sh  project-utils.sh
scripts/release/: check-changelog.py  test-full-release.sh  test-release.sh
scripts/utils/: version-utils.py
src/VisaBundleCore/: ConnectionRegistry.cs  README.md  VISAManagerCore.cs  VisaBundleCore.csproj  VisaCore.cs  VisaException.cs  VisaSettingsCore.cs
src/visa_bundle/: Setting.py  VISA.py  __init__.py
template_project/: .gitignore  README.md
template_project/.ai-prompts/: documentation.md  test-generation.md
template_project/.claude/: settings.local.json
template_project/config/: release-config.yml
template_project/new_scripts/: build_wheel.bat  create_venv.bat  delete_branch.bat  release_project.bat  release_to_testmatrix.bat  subtree_pull_all.bat  update_version.bat
template_project/scripts/: all_scripts_examples.txt  batch-setup.sh  (+14 more)
test-venv/: pyvenv.cfg
tests/: test_visa_bundle.py  test_visa_bundle_advanced.py
(+9 files in other folders)
